--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-	<title>{{ page.title }}</title>
-	<!-- link to main stylesheet -->
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
+<html lang="en">
+
+  {% include head.html %}
+
   <body>
-	<nav>
-	  <ul>
-	    <li><a href="/">Home</a></li>
-	    <li><a href="https://github.com/philippe-grenet">About</a></li>
-	  </ul>
-	</nav>
-	<div class="container">
 
-	  {{ content }}
+    <div class="container content">
+      <header class="masthead">
+        <h3 class="masthead-title">
+          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <small>{{ site.tagline }}</small>
+        </h3>
+      </header>
 
-	</div><!-- /.container -->
-	<footer>
-	  <ul>
-        <li><a href="https://github.com/philippe-grenet/exordium">Exordium</a></li>
-	  </ul>
-	</footer>
+      <main>
+        {{ content }}
+      </main>
+
+      <footer class="footer">
+        <small>
+          <a href="https://github.com/philippe-grenet/exordium">Exordium</a> -
+          <a href="https://github.com/philippe-grenet/">About</a>
+        </small>
+      </footer>
+    </div>
+
   </body>
 </html>
